# 2024

./: .gitignore  .token  11.3d  11.3dl  11.3dl.bak  11_3.3d  11_3.3dl  12.3d  12.3dl  7bis.3dl.new  8.3d  8.3dl  README.md  decode.py  dune  icfp2024.opam  louis1.3d  louis1.3d.bak  scores  sin.ml
3d/: .ocamlformat  1.3d  1.3d.new  10.3d  11.3d  11.3d.new  11.3dl  11.3dl.new  12.3d.new  12.3dl  12new.3d  12new.3dl  2.3d  2.3d.new  3.3d  3.3d.new  3.3d.new2  4.3d  4.3d.new  5.3d  5.3dl  6.3d  6.3d.new  7.3d  7aa.3d  7aa.3dl  7bis.3d  7bis.3dl  7ter.3d  7ter.3dl  8.3d  8.3d.bis  8.3d.new  8aa.3d  8aa.3dl  9.3d  c3d.ml  c3d_7.ml  c3d_8.ml  c3d_9.ml  (+7 more)
3d/draw/: draw.ml  dune
3d/layouted/: 10.3d  10.3dl  10.3dl_770  9.3d  9.3dl
inputs/: 3d1  3d10  3d11  3d12  3d2  3d3  3d4  3d5  3d6  3d7  3d8  3d9  efficiency1  efficiency10  efficiency11  efficiency12  efficiency13  efficiency2  efficiency3  efficiency4  efficiency5  efficiency6  efficiency7  efficiency8  efficiency9  lambdaman1  lambdaman10  lambdaman11  lambdaman12  lambdaman13  lambdaman14  lambdaman15  lambdaman16  lambdaman17  lambdaman18  lambdaman19  lambdaman2  lambdaman20  lambdaman21  lambdaman3  (+32 more)
lib/: Eval.ml  api.ml  ast.ml  common.ml  decode.ml  dune  lamdaman_handcoded.ml  miniterm.ml  run_lambdaman.ml
pages/: 3d  3d-example  lambdaman  spaceship
rafael/: .gitignore  header.hpp  lambdaman-test.cpp  lambdaman.cpp  lambdaman.hpp  lambdaman_random.cpp  lambdaman_random1.cpp  lambdaman_random18.cpp  lambdaman_random19.cpp  lambdaman_random2.cpp  lambdaman_random20.cpp  lambdaman_random3.cpp  spaceship.cpp  (+4 more)
(+29 files in other folders)
