(executable
 (name game)
 (public_name 3d)
 (modules game)
 (libraries zarith ocolor))

(executable
 (name link)
 (modules link))

(executable
 (name c3d)
 (modules c3d)
 (libraries comp))

(executable
 (name c3d_9)
 (modules c3d_9)
 (libraries comp))

(library
 (name comp)
 (modules compile layout run_comp)
 (libraries icfpc minisat containers))
